# clovers-client

./: .gitignore  README.md  bot.bat  bot.py  clear.bat  pyproject.toml  run.bat
clovers_cli/: __main__.py  config.py  test.py
clovers_client/: __clovers.py  __init__.py  __logger.py  config.py  event.py  logger.py  result.py  utils.py
clovers_client.console.client.page/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  webpack.config.js
clovers_client.console.client.page/src/: index.html  main.ts  style.css
clovers_client.console.client.page/src/code/: chat.ts  core.ts  group.ts  modal.ts  tools.ts  types.ts  user.ts
clovers_client.console.client.page/src/styles/: base.css  chat.css  input_area.css  itemlist.css  modal.css  ui.css
clovers_client.console.page/: index.html  package-lock.json  package.json  vite.config.ts
clovers_client.console.page/src/: index.ts  main.ts  style.css
clovers_client.console.page/src/code/: chat.ts  core.ts  tools.ts  types.ts  user.ts  websocket.ts
clovers_client.console.page/src/styles/: base.css  button.css  chat.css  input_area.css  itemlist.css  markdown.css  modal.css  ui.css
clovers_client/console/: __init__.py  adapter.py  client.py  config.py  console.py  data.py  event.py  typing.py  utils.py
clovers_client/console/adapter/: __init__.py  adapter.py  config.py
clovers_client/console/client/: a.py  client.py  config.py  console.py  script.py
clovers_client/console/page/: index.html  (+1 more)
clovers_client/onebot_v11/: __init__.py  adapter.py  config.py  typing.py
clovers_client/qq/: __init__.py  client.py  config.py
clovers_console/: __init__.py  adapter.py  data.py  main.py
extra/qq/: client copy.py  config.py
sample/: bot.py
(+61 files in other folders)
