[project]
name = "clovers-client"
version = "0.2.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = ["clovers (>=0.4.8,<1.0.0)", "pydantic>=2.10.6"]

[project.optional-dependencies]
console = ["uvicorn>=0.42.0", "fastapi>=0.135.2", "python-multipart>=0.0.22"]
onebot = ["websockets>=15.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
